fixing spacing on work section

--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,6 @@
 
 .main-headline {
 	margin-top: 1%; 
-  text-align: center;
 }
 
 .hand-illustration {
